# lab4-new

./: .gitignore  readme.md
src/config-gen/: .setup_assistant  CMakeLists.txt  gazebo.launch  moveit_robot_control.launch  package.xml
src/config-gen/config/: controllers.yaml  fake_controllers.yaml  hand_tutorial.srdf  ompl_planning.yaml  ros_controllers.yaml
src/config-gen/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hand_tutorial_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/lab4/: CMakeLists.txt  package.xml
src/lab4/src/: test.cpp
